--- a/JetStreamCompose/jetstream/src/main/AndroidManifest.xml
+++ b/JetStreamCompose/jetstream/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@ https://www.apache.org/licenses/LICENSE-2.0
         android:required="false" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".JetStreamApplication"
