--- a/JetStreamCompose/jetstream/src/main/AndroidManifest.xml
+++ b/JetStreamCompose/jetstream/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@ https://www.apache.org/licenses/LICENSE-2.0
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
     <application
         android:name=".JetStreamApplication"
         android:allowBackup="true"
